Infos bucket front (debut)

--- a/angularCovid/src/app/error-infos/error-infos.component.html
+++ b/angularCovid/src/app/error-infos/error-infos.component.html
@@ -1,1 +1,14 @@
-<h2>Affichage situationnel des erreurs</h2>
+<h2>Etat du Tocken Bucket</h2>
+
+<table>
+    <tr>
+        <td>
+            <button mat-raised-button color="primary" (click)="info()">Infos</button>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            {{infos}}
+        </td>
+    </tr>
+</table>
