--- a/angularCovid/src/app/error-infos/error-infos.component.html
+++ b/angularCovid/src/app/error-infos/error-infos.component.html
@@ -2,13 +2,9 @@
 
 <table>
     <tr>
-        <td>
-            <button mat-raised-button color="primary" (click)="info()">Infos</button>
-        </td>
+        {{infos}}
     </tr>
     <tr>
-        <td>
-            {{infos}}
-        </td>
+        <button (click)="backToHome()"> Redirection </button>
     </tr>
 </table>
