--- a/angularCovid/src/app/vaccination-center-list/vaccination-center-list.component.html
+++ b/angularCovid/src/app/vaccination-center-list/vaccination-center-list.component.html
@@ -33,3 +33,8 @@
 <app-vaccination-center [center]="selected" 
     (deleted)="onDeleted($event)">
 </app-vaccination-center>
+<!--
+<td>
+    <button mat-raised-button color="primary" (click)="info()">Infos</button>
+</td>
+-->
